add comments to flask project

--- a/Flask/templates/choose.html
+++ b/Flask/templates/choose.html
@@ -2,7 +2,7 @@
 {% block title %}Book Information{% endblock %}
 {% block content %}
 <form action="#" method="post">
-	<p> &nbsp;&nbsp;Write ISBN or Title of the book:</p>
+	<p> &nbsp;&nbsp;&nbsp;Write ISBN or Title of the book:</p>
 	<p> &nbsp;&nbsp;&nbsp;<input type="text" name="nm" /></p>
   <p> &nbsp;&nbsp;&nbsp;<input type="submit" name="submit_button" value="ISBN">
   <input type="submit" name="submit_button" value="Title"></p>
